# cmake

./: CMakeLists.txt
CMakeProject2/: CMakeLists.txt  CMakeProject2.cpp
CMakeProject2/dsc/: CMakeLists.txt  dsc.cpp
CMakeProject2/include/: dsc.h
